--- a/courier-parent/courier-frontend/src/main/webapp/xhtml/courier.xhtml
+++ b/courier-parent/courier-frontend/src/main/webapp/xhtml/courier.xhtml
@@ -3,84 +3,86 @@
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui"
-      xmlns:h="http://java.sun.com/jsf/html" xml:lang="en" lang="en">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xml:lang="en" lang="en">
 <h:head>
     <title>Couriers</title>
 </h:head>
 <body>
 <h:form id="mainForm">
     <p:growl id="growl" showDetail="true" globalOnly="true"/>
-    <p:toolbar>
-        <p:toolbarGroup>
-            <p:commandButton value="New" actionListener="#{courierMBean.initNewCourier()}"
-                             update="@form :courierDialog"
-                             oncomplete="PF('courierDialog').show()"
-                             style="margin-right: 10px"/>
-            <p:commandButton rendered="#{courierMBean.selectedCourier.id!=null}" value="Remove"
-                             actionListener="#{courierMBean.remove()}" update="@form" style="margin-right: 10px">
-                <p:confirm header="Remove" message="Are you sure?"/>
-            </p:commandButton>
-            <p:commandButton rendered="#{courierMBean.selectedCourier.id!=null}" value="Edit"
-                             update="@form :courierDialog"
-                             oncomplete="PF('courierDialog').show()"/>
-        </p:toolbarGroup>
-    </p:toolbar>
-    <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" responsive="true" width="350">
-        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no ui-button-flat"/>
-        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes"/>
-    </p:confirmDialog>
+    <ui:include src="baseMenuForAdmin.xhtml"/>
+    <h:panelGroup rendered="#{loggedInUserMBean.loggedIn and loggedInUserMBean.admin}">
+        <p:toolbar>
+            <p:toolbarGroup>
+                <p:commandButton value="New" actionListener="#{courierMBean.initNewCourier()}"
+                                 update="@form :courierDialog"
+                                 oncomplete="PF('courierDialog').show()"
+                                 style="margin-right: 10px"/>
+                <p:commandButton rendered="#{courierMBean.selectedCourier.id!=null}" value="Remove"
+                                 actionListener="#{courierMBean.remove()}" update="@form" style="margin-right: 10px">
+                    <p:confirm header="Remove" message="Are you sure?"/>
+                </p:commandButton>
+                <p:commandButton rendered="#{courierMBean.selectedCourier.id!=null}" value="Edit"
+                                 update="@form :courierDialog"
+                                 oncomplete="PF('courierDialog').show()"/>
+            </p:toolbarGroup>
+        </p:toolbar>
+        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" responsive="true" width="350">
+            <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no ui-button-flat"/>
+            <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes"/>
+        </p:confirmDialog>
 
-    <p:dataTable id="table" value="#{courierMBean.list}" var="courier" rows="10"
-                 paginator="true" selectionMode="single" selection="#{courierMBean.selectedCourier}"
-                 rowKey="#{courier.id}"
-                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                 currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
-                 rowsPerPageTemplate="5,10,{ShowAll|'All'}">
+        <p:dataTable id="table" value="#{courierMBean.list}" var="courier" rows="10"
+                     paginator="true" selectionMode="single" selection="#{courierMBean.selectedCourier}"
+                     rowKey="#{courier.id}"
+                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                     currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
+                     rowsPerPageTemplate="5,10,{ShowAll|'All'}">
 
-        <p:ajax event="rowSelect" update="@form"/>
-        <p:ajax event="rowUnselect" listener="#{courierMBean.initNewCourier()}" update="@form"/>
+            <p:ajax event="rowSelect" update="@form"/>
+            <p:ajax event="rowUnselect" listener="#{courierMBean.initNewCourier()}" update="@form"/>
 
-        <p:column toggleable="false" filterBy="#{courier.id}" filterMatchMode="contains" sortBy="#{courier.id}">
-            <f:facet name="header">ID</f:facet>
-            <h:outputText value="#{courier.id}"/>
-        </p:column>
+            <p:column toggleable="false" filterBy="#{courier.id}" filterMatchMode="contains" sortBy="#{courier.id}">
+                <f:facet name="header">ID</f:facet>
+                <h:outputText value="#{courier.id}"/>
+            </p:column>
 
-        <p:column filterBy="#{courier.firstName}" filterMatchMode="contains" sortBy="#{courier.firstName}">
-            <f:facet name="header">Fist Name</f:facet>
-            <h:outputText value="#{courier.firstName}"/>
-        </p:column>
+            <p:column filterBy="#{courier.firstName}" filterMatchMode="contains" sortBy="#{courier.firstName}">
+                <f:facet name="header">Fist Name</f:facet>
+                <h:outputText value="#{courier.firstName}"/>
+            </p:column>
 
-        <p:column filterBy="#{courier.lastName}" filterMatchMode="contains" sortBy="#{courier.lastName}">
-            <f:facet name="header">Last Name</f:facet>
-            <h:outputText value="#{courier.lastName}"/>
-        </p:column>
+            <p:column filterBy="#{courier.lastName}" filterMatchMode="contains" sortBy="#{courier.lastName}">
+                <f:facet name="header">Last Name</f:facet>
+                <h:outputText value="#{courier.lastName}"/>
+            </p:column>
 
-        <p:column filterBy="#{courier.phoneNumber}" filterMatchMode="contains" sortBy="#{courier.phoneNumber}">
-            <f:facet name="header">Phone Number</f:facet>
-            <h:outputText value="#{courier.phoneNumber}"/>
-        </p:column>
+            <p:column filterBy="#{courier.phoneNumber}" filterMatchMode="contains" sortBy="#{courier.phoneNumber}">
+                <f:facet name="header">Phone Number</f:facet>
+                <h:outputText value="#{courier.phoneNumber}"/>
+            </p:column>
 
-        <p:column filterBy="#{courier.modifiedDate}" filterMatchMode="contains" sortBy="#{courier.modifiedDate}">
-            <f:facet name="header">Last Modified</f:facet>
-            <h:outputText value="#{courier.modifiedDate}"/>
-        </p:column>
+            <p:column filterBy="#{courier.modifiedDate}" filterMatchMode="contains" sortBy="#{courier.modifiedDate}">
+                <f:facet name="header">Last Modified</f:facet>
+                <h:outputText value="#{courier.modifiedDate}"/>
+            </p:column>
 
-        <p:column filterBy="#{courier.createdDate}" filterMatchMode="contains" sortBy="#{courier.createdDate}">
-            <f:facet name="header">Created Date</f:facet>
-            <h:outputText value="#{courier.createdDate}"/>
-        </p:column>
+            <p:column filterBy="#{courier.createdDate}" filterMatchMode="contains" sortBy="#{courier.createdDate}">
+                <f:facet name="header">Created Date</f:facet>
+                <h:outputText value="#{courier.createdDate}"/>
+            </p:column>
 
-        <p:column>
-            <f:facet name="header">Created User</f:facet>
-            <h:outputText rendered="#{courier.creatorUser!=null}" value="#{courier.creatorUser.userName}"/>
-        </p:column>
+            <p:column>
+                <f:facet name="header">Created User</f:facet>
+                <h:outputText rendered="#{courier.creatorUser!=null}" value="#{courier.creatorUser.userName}"/>
+            </p:column>
 
-        <p:column>
-            <f:facet name="header">Modifier User</f:facet>
-            <h:outputText rendered="#{courier.modifiedUser!=null}" value="#{courier.modifiedUser.userName}"/>
-        </p:column>
-
-    </p:dataTable>
+            <p:column>
+                <f:facet name="header">Modifier User</f:facet>
+                <h:outputText rendered="#{courier.modifiedUser!=null}" value="#{courier.modifiedUser.userName}"/>
+            </p:column>
+        </p:dataTable>
+    </h:panelGroup>
 </h:form>
 
 <p:dialog modal="true" id="courierDialog" widgetVar="courierDialog">
@@ -114,5 +116,6 @@
         </p:panelGrid>
     </h:form>
 </p:dialog>
+<ui:include src="loginForm.xhtml"/>
 </body>
 </html>
